docs: update README with JavaFX + MySQL + DAO architecture